Completed 7 Essential tips

--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -16,6 +16,8 @@
     "* Latex\n",
     "* Writing tools\n",
     "* Printing PDF\n",
+    "* Conclusion\n",
+    "* Reference\n",
     "\n",
     "# Introduction\n",
     "\n",
@@ -100,7 +102,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "If you want to use ocean16, you can change your theme from a Jupyter Notebook cell by typing the following and hit shift+enter."
+    "If you want to use ocean16, please put the following in a Jupyter Notebook cell and hit shift+enter."
    ]
   },
   {
@@ -128,9 +130,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Font & Fontsize\n",
+    "## Font & Font size\n",
     "\n",
-    "### Method one\n",
+    "__Method one__\n",
     "\n",
     "The following image shows the position of fonts. \n",
     "![Jupyter theme font](./image/tf1.png)\n",
@@ -138,7 +140,7 @@
     "The following image shows the font size.\n",
     "![Jupyter theme fontsize](./image/tf.png)\n",
     "\n",
-    "If you want to change the text cell font and fontsize you can type the following in a cell and hit shift+enter."
+    "If you want to change the text cell font and font size you can type the following in a cell and hit shift+enter."
    ]
   },
   {
@@ -152,9 +154,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can find [all font types here](https://github.com/dunovank/jupyter-themes#monospace-fonts-code-cells).\n",
+    "You can find [all the font types here](https://github.com/dunovank/jupyter-themes#monospace-fonts-code-cells).\n",
     "\n",
-    "You can try the following setting."
+    "You can try a different setting."
    ]
   },
   {
@@ -170,30 +172,29 @@
    "source": [
     "### Method two\n",
     "\n",
-    "If you do not want to to change the theme but want to change the font size and font, then you need to change the Jupyter Notebook\n",
-    "CSS. Open `.jupyter\\custom\\custom.css` in a editor. If you don't have an editor, please install [VS code](https://code.visualstudio.com/download).\n",
+    "If you do not want to change the theme but want to change the font size and font, then you need to change the Jupyter Notebook\n",
+    "CSS. Open `.jupyter\\custom\\custom.css` in an editor. If you don't have an editor, please install the [VS code](https://code.visualstudio.com/download).\n",
     "\n",
-    "And paste the followings. You can change `font-size:110%` to any number as you like."
+    "And paste the following to the file. You can change `font-size:130%` to any number as you like."
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "body {\n",
-    "    /*font-size: 1.5em;*/\n",
-    "}\n",
-    "\n",
     "div#notebook p, div#notebook{\n",
-    "    font-size: 110%\n",
+    "    font-size: 130%;\n",
+    "    line-height: 125%;\n",
     "}\n",
     "\n",
     ".rendered_html pre, .rendered_html table{\n",
-    "    font-size:110%\n",
+    "    font-size:130%;\n",
+    "    line-height: 125%;\n",
     "}\n",
     "\n",
     ".CodeMirror, .CodeMirror pre, .CodeMirror-dialog, .CodeMirror-dialog .CodeMirror-search-field, .terminal-app .terminal {\n",
-    "    font-size: 110%;\n",
+    "    font-size: 130%;\n",
+    "    line-height: 125%;\n",
     "}"
    ]
   },
@@ -214,7 +215,7 @@
     "\n",
     "## How to change the cell to markdown\n",
     "\n",
-    "One way to change a cell to markdown is selecting Markdown from a dropdown.\n",
+    "One way to change a cell to markdown is by selecting Markdown from a dropdown.\n",
     "\n",
     "![select markdown](./image/markdown.png)\n",
     "\n",
@@ -254,7 +255,7 @@
    "source": [
     "## List\n",
     "\n",
-    "You can use * or - to create an nested unordered list and use numbers for an ordered list."
+    "You can use * or - to create a nested unordered list and use numbers for an ordered list."
    ]
   },
   {
@@ -269,8 +270,8 @@
     "\n",
     "1. Main list 1\n",
     "2. Main list 2\n",
-    "  - Sub list 2-1\n",
-    "  - Sub list 2-2\n",
+    "  - sub list 2-1\n",
+    "  - sub list 2-2\n",
     "3. Main list 3"
    ]
   },
@@ -278,19 +279,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above produces the followings.\n",
+    "The above produces the following.\n",
     "\n",
     "- main 1\n",
     "  - sub 1\n",
     "  - sub 2\n",
+    "    - sub sub 1\n",
+    "    - sub sub 2\n",
     "- main 2\n",
     "- main 3\n",
     "\n",
     "\n",
     "1. Main list 1\n",
     "2. Main list 2\n",
-    "  - Sub list 2-1\n",
-    "  - Sub list 2-2\n",
+    "  - sub list 2-1\n",
+    "  - sub list 2-2\n",
     "3. Main list 3"
    ]
   },
@@ -300,7 +303,7 @@
    "source": [
     "## Link\n",
     "\n",
-    "You need to use `[Link name](url)` for links."
+    "Markdown links use parentheses immediately after the link text like `[Link name](url)`."
    ]
   },
   {
@@ -324,14 +327,14 @@
    "source": [
     "## Image\n",
     "\n",
-    "You need to use `![alt text](link)` for images.\n"
+    "Markdown image syntax is like Links syntax but you prefix it with an exclamation mark like `![alt text](link)`.\n"
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "![alt text here](./image/jupyter_logo.png \"Logo Title Jupyter Notebook logo\")"
+    "![alt text here](https://github.com/shinokada/python-for-ib-diploma-mathematics/blob/master/image/jupyter_logo.png \"Logo Title Jupyter Notebook logo\")"
    ]
   },
   {
@@ -349,7 +352,7 @@
    "source": [
     "## Tables\n",
     "\n",
-    "To add a table, use three or more hyphens (---) to create each column’s header, and use pipes (|) to separate each column. You can optionally add pipes on either end of the table. Use `:---:` to center a column, `:---` to align left.\n"
+    "To add a table, use three or more hyphens (---) to create each column’s header, and use pipes (|) to separate each column. You can optionally add pipes on either end of the table. Use `:---:` to center a column, `:---` to align left."
    ]
   },
   {
@@ -358,8 +361,8 @@
    "source": [
     "Id | Syntax      | Description \n",
     "--|:---------:|:-----------:\n",
-    "1|Header      | Title       \n",
-    "2|Paragraph   | Text        "
+    "1|Header      | Something very long long long here      \n",
+    "2|Long long long paragraph   | Text    "
    ]
   },
   {
@@ -381,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to know more, please read [this page](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)"
+    "If you want to know more about markdown, please read [this page](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)."
    ]
   },
   {
@@ -424,8 +427,13 @@
     "Integration|\\int |\\int\\limits_{a}^{b} x^2 dx |$\\int\\limits_{a}^{b} x^2 dx$\n",
     "Trig| \\sin | \\sin()|$\\sin(x+y)$\n",
     "Comparison | \\leq | \\leq \\geq \\approx \\neq |$ \\leq \\geq \\approx \\neq$\n",
+    "Overline | \\overline{} | \\overline{x} | $\\overline{x}$\n",
     "\n",
-    "For more information please see this [article](https://davidhamann.de/2017/06/12/latex-cheat-sheet/) or [this link](https://www.overleaf.com/learn/latex/Integrals,_sums_and_limits)."
+    "For more information please see this [article](https://davidhamann.de/2017/06/12/latex-cheat-sheet/) or [this link](https://www.overleaf.com/learn/latex/Integrals,_sums_and_limits).\n",
+    "\n",
+    "Can you write the following equation for mean in LaTeX?\n",
+    "\n",
+    "$$\\overline{x}=\\frac{\\sum \\limits _{i=1} ^k f_i x_i}{n} \\text{, where } n=\\sum \\limits _{i=1} ^k f_i  $$\n"
    ]
   },
   {
@@ -442,23 +450,9 @@
     "\n",
     "- Hemmingway Editor\n",
     "\n",
-    "After checking with Grammarly, [Hemmingwayapp](http://www.hemingwayapp.com/) is the next tool to make your article bold and clear. Even though your audience is \n",
+    "After checking with Grammarly, [Hemmingway App](http://www.hemingwayapp.com/) is the next tool to make your article bold and clear. Even though your audience is adult, aim Grade 6 for readability in Hemmingway App. \n",
     "\n",
     "![Hemmingway Editor](./image/hemmingway.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n"
    ]
   },
   {
@@ -471,7 +465,7 @@
     "\n",
     "[Stackoverflow](https://stackoverflow.com/questions/34818723/export-notebook-to-pdf-without-code)\n",
     "\n",
-    "* Run Jupyter notebook and download the notebook in the browser: File->Download as->HTML and you will get a html page with code and output.\n",
+    "* Run Jupyter Notebook in the browser then go to File->Download as->HTML and you will get an HTML page with code and output.\n",
     "\n",
     "![download as](image/downloadas.png)\n",
     "\n",
@@ -496,13 +490,14 @@
     "![console](image/console2.png)\n",
     "\n",
     "\n",
-    "* The code removes all input div DOM. Then right mouse button and chose \"Save Page As\" and Save the \"Complete page\" (not single page).\n",
+    "* The code removes all input div DOM. Then right mouse button and choose \"Save Page As\" and Save the \"Complete page\" (not single page).\n",
     "\n",
     "![console](image/save.png)\n",
     "\n",
-    "* You will get a page with an associated folder in windows. Use a trick by zip the html page and then extract to unbind the associated. \n",
-    "\n",
-    "* Now it is a single html page without code. You can re-distribute it or print it as PDF."
+    "* You will get a page with an associated folder in windows. Use a  trick by zip the HTML page and then extract to unbind the associated. \n",
+    "     \n",
+    "* Now it is a single HTML page without code. You can print it as PDF.\n",
+    "     "
    ]
   },
   {
@@ -511,7 +506,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    " I hope these will save your time and be ready for your first Data Scienc article. If you have any more tips, please put them in comments."
+    "I hope these will save you time and be ready for your first Data Science article. If you have any more tips, please put them in the comments."
    ]
   },
   {
