--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7 Essential Tips for Writing with Jupyter Notebook\n",
-    "## For Your First Data Science Article\n",
+    "# 7 Essential Tips for Writing with Jupyter Notebook\n",
+    "## Guide For Your First Data Science Article\n",
     "\n",
     "### Table of Contents\n",
     "\n",
