--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -17,7 +17,7 @@
     "* Writing tools\n",
     "* Printing PDF\n",
     "* Conclusion\n",
-    "* Reference\n",
+    "* References\n",
     "\n",
     "# Introduction\n",
     "\n",
@@ -33,7 +33,7 @@
     "Shortcuts will speed up your writing. Pressing `h` toggles the keyboards shortcuts screen. You can see all commands by pressing &#8984;&#8679;f. I use the following shortcuts often and it will be useful if you can memorize them.\n",
     "\n",
     "Symbol  | Name\n",
-    "------- |-----\n",
+    ":------: |:----:\n",
     "&#8984; |Command, Cmd \n",
     "&#8963; |Control, Ctl\n",
     "&#8997; |Option Opt \n",
@@ -45,7 +45,7 @@
     "<br>\n",
     "\n",
     "Shortcut | Function\n",
-    "---------|---------\n",
+    ":-------:|:--------:\n",
     "&#8679;&#8617; | Run cell and select below\n",
     "&#8963;&#8617; | Run selected cells\n",
     "&#8997;&#8617; | Run cell and insert below\n",
