--- a/Beginners_Guide_to_the_t_Test_with_Jupyter_Notebook.ipynb
+++ b/Beginners_Guide_to_the_t_Test_with_Jupyter_Notebook.ipynb
@@ -11,10 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table of contents\n",
+    "# Table of Contents\n",
     "\n",
     "- Introduction\n",
-    "- The pooled two-sample t-test"
+    "- The pooled two-sample t-test\n",
+    "- One-tailed tests\n",
+    "- Two-tailed tests\n",
+    "- Real-life example\n",
+    "- Conclusion\n",
+    "- References"
    ]
   },
   {
@@ -473,20 +478,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test statistic=0.21, \n",
-      "p-value=0.5814, \n",
-      "degree of freedom=78\n",
-      "\n",
-      "At 0.05 level of significance, \n",
-      "we accept the null hypotheses.  \n",
-      "The FSIQ 1 is greater than the VIQ 2.\n"
+     "ename": "NameError",
+     "evalue": "name 'fsiq' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-472a1ba9c1ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m tstat, pvalue, df = sm.ttest_ind(\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mfsiq\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mviq\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0malternative\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'smaller'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     usevar='pooled')\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fsiq' is not defined"
      ]
     }
    ],
@@ -520,7 +523,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reference\n",
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
     "\n",
     "- https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.ttest_ind.html"
    ]
