--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -440,6 +440,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Equation Numbering\n",
+    "\n",
+    "For equation numbering, you need to add [`jupyter_contib_nbextensions`](https://jupyter-contrib-nbextensions.readthedocs.io/en/latest/install.html#install-the-python-package).\n",
+    "\n",
+    "### PIP \n",
+    "\n",
+    "You can install it from a Jupyter Notebook cell."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "!pip install jupyter_contrib_nbextensions\n",
+    "!jupyter contrib nbextension install --user"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or from a terminal without `!`."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "pip install jupyter_contrib_nbextensions\n",
+    "jupyter contrib nbextension install --user"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conda"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "conda install -c conda-forge jupyter_contrib_nbextensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Refresh you browser and you should see Nbextensions tab in the main menu.\n",
+    "\n",
+    "![nbextensions tab](./image/nb.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Writing tools\n",
     "\n",
     "Before publishing your article, I always need to check grammar and words.\n",
