--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -14,6 +14,7 @@
     "* Theme and Fonts\n",
     "* Markdown\n",
     "* Latex\n",
+    "* Equation Numbering and Alignment\n",
     "* Writing tools\n",
     "* Printing PDF\n",
     "* Conclusion\n",
@@ -498,27 +499,191 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Click the Nbextensions tab and search Equation Auto Numbering. Click the box to enable the extension."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![Equation Auto Numbering](./image/equnum.png)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Please add the following to a markdown cell. It add equation numbers at the end from 1 to 3."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "{x} = \\sigma(y-x) \\\\\n",
+    "{y} = \\rho x - y - xz \\\\\n",
+    "{x+y+z} = -\\beta z + xy \n",
+    "\\end{align}\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "{x} = \\sigma(y-x) \\\\\n",
+    "{y} = \\rho x - y - xz \\\\\n",
+    "{x+y+z} = -\\beta z + xy \n",
+    "\\end{align}\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### New line and tag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Refresh the browser and try the following equations to see the equation numbers. You can add equation numbers using `\\tag{}`. The double back-slashes `\\\\` is for a new line. You need enclose all equations with `\\begin{align}` and `\\end{align}`. "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "{x} = \\sigma(y-x) \\tag{1-1}\\\\\n",
+    "{y} = \\rho x - y - xz \\tag{1-2}\\\\\n",
+    "{x+y+z} = -\\beta z + xy \\tag{1-3}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Equation alignment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Right alignment\n",
+    "\n",
+    "Normally equations are aligned to the right."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "{x} = \\sigma(y-x) \\tag{2-1}\\\\\n",
+    "{y} = \\rho x - y - xz \\tag{2-2}\\\\\n",
+    "{x+y+z} = -\\beta z + xy \\tag{2-3}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "{x} = \\sigma(y-x) \\tag{2-1}\\\\\n",
+    "{y} = \\rho x - y - xz \\tag{2-2}\\\\\n",
+    "{x+y+z} = -\\beta z + xy \\tag{2-3}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aligning at equal signs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By adding & symbol, equations weill be aligned at that point. For example if you want to align equations at equal symbol, use &=."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "{x} & = \\sigma(y-x) \\tag{3-1}\\\\\n",
+    "{y} & = \\rho x - y - xz \\tag{3-2}\\\\\n",
+    "{x+y+z} & = -\\beta z + xy \\tag{3-3}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "{x} & = \\sigma(y-x) \\tag{3-1}\\\\\n",
+    "{y} & = \\rho x - y - xz \\tag{3-2}\\\\\n",
+    "{x+y+z} & = -\\beta z + xy \\tag{3-3}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Left alignment"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "& {x} = \\sigma(y-x) \\tag{4-1}\\\\\n",
+    "& {y} = \\rho x - y - xz \\tag{4-2}\\\\\n",
+    "& {x+y+z} = -\\beta z + xy \\tag{4-3}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "& {x} = \\sigma(y-x) \\tag{4-1}\\\\\n",
+    "& {y} = \\rho x - y - xz \\tag{4-2}\\\\\n",
+    "& {x+y+z} = -\\beta z + xy \\tag{4-3}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -632,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
