--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -13,8 +13,8 @@
     "* Help, Shortcuts and Number lines\n",
     "* Theme and Fonts\n",
     "* Markdown\n",
-    "* Latex\n",
-    "* Equation Numbering and Alignment\n",
+    "* LaTeX\n",
+    "* LaTeX Equation Numbering & Alignment\n",
     "* Writing tools\n",
     "* Printing PDF\n",
     "* Conclusion\n",
@@ -441,20 +441,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Equation Numbering\n",
+    "# LaTeX Equation Numbering & Alignment\n",
+    "\n",
+    "### Equation Numbering\n",
     "\n",
     "For equation numbering, you need to add [`jupyter_contib_nbextensions`](https://jupyter-contrib-nbextensions.readthedocs.io/en/latest/install.html#install-the-python-package).\n",
     "\n",
     "### PIP \n",
     "\n",
-    "You can install it from a Jupyter Notebook cell."
+    "If you installed your Jupyter Notebook using `pip`, you can install `jupyter_contib_nbextension` from a Jupyter Notebook cell."
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "!pip install jupyter_contrib_nbextensions\n",
+    "!pip install jupyter_contrib_nbextensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then you need to install CSS."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "!jupyter contrib nbextension install --user"
    ]
   },
@@ -469,7 +484,20 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "pip install jupyter_contrib_nbextensions\n",
+    "pip install jupyter_contrib_nbextensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Installing CSS."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "jupyter contrib nbextension install --user"
    ]
   },
@@ -477,7 +505,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conda"
+    "### Conda\n",
+    "\n",
+    "If your installation is through Conda, then run the following from a Jupyter Notebook cell or a terminal."
    ]
   },
   {
@@ -514,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please add the following to a markdown cell. It add equation numbers at the end from 1 to 3."
+    "Refresh the browser and try the following equations to see the equation numbers. Please add the following to a markdown cell. It adds equation numbers at the end from 1 to 3. You need to start with `\\begin{align}` and end with `\\end{align}`."
    ]
   },
   {
@@ -547,18 +577,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### New line and tag"
+    "### Newline and tag"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Refresh the browser and try the following equations to see the equation numbers. You can add equation numbers using `\\tag{}`. The double back-slashes `\\\\` is for a new line. You need enclose all equations with `\\begin{align}` and `\\end{align}`. "
+    "You can add equation numbers using `\\tag{}`. The double back-slashes `\\\\` is for a new line. You need enclose all equations with `\\begin{align}` and `\\end{align}`. "
    ]
   },
   {
    "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "{x} = \\sigma(y-x) \\tag{1-1}\\\\\n",
+    "{y} = \\rho x - y - xz \\tag{1-2}\\\\\n",
+    "{x+y+z} = -\\beta z + xy \\tag{1-3}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "$$\n",
@@ -583,33 +626,7 @@
    "source": [
     "### Right alignment\n",
     "\n",
-    "Normally equations are aligned to the right."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\begin{align}\n",
-    "{x} = \\sigma(y-x) \\tag{2-1}\\\\\n",
-    "{y} = \\rho x - y - xz \\tag{2-2}\\\\\n",
-    "{x+y+z} = -\\beta z + xy \\tag{2-3}\n",
-    "\\end{align}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\begin{align}\n",
-    "{x} = \\sigma(y-x) \\tag{2-1}\\\\\n",
-    "{y} = \\rho x - y - xz \\tag{2-2}\\\\\n",
-    "{x+y+z} = -\\beta z + xy \\tag{2-3}\n",
-    "\\end{align}\n",
-    "$$"
+    "Normally equations are aligned to the right as above examples."
    ]
   },
   {
@@ -623,7 +640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By adding & symbol, equations weill be aligned at that point. For example if you want to align equations at equal symbol, use &=."
+    "By adding & symbol, equations will be aligned at that point. For example if you want to align equations at equal symbol, use `&=`."
    ]
   },
   {
