--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -739,6 +739,8 @@
     "\n",
     "![console](image/console.png)\n",
     "\n",
+    "__Removing code blocks__\n",
+    "\n",
     "* Run following command in the console:"
    ]
   },
@@ -755,8 +757,30 @@
    "source": [
     "![console](image/console2.png)\n",
     "\n",
+    "The code removes all input div DOM.\n",
     "\n",
-    "* The code removes all input div DOM. Then right mouse button and choose \"Save Page As\" and Save the \"Complete page\" (not single page).\n",
+    "__Removing Out blocks__\n",
+    "\n",
+    "* We need to remove [Out] blocks as well.\n",
+    "\n",
+    "![Out image](./image/out.png)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "document.querySelectorAll(\"div.output_prompt\").forEach(function(a){a.innerHTML=''})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After removing all Out blocks](./i.\n",
+    "\n",
+    "\n",
+    "* Then right mouse button and choose \"Save Page As\" and Save the \"Complete page\" (not single page).\n",
     "\n",
     "![console](image/save.png)\n",
     "\n",
