--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -16,7 +16,7 @@
     "* LaTeX\n",
     "* LaTeX Equation Numbering & Alignment\n",
     "* Writing tools\n",
-    "* Printing PDF\n",
+    "* Removing Code Blocks and Printing PDF\n",
     "* Conclusion\n",
     "* References\n",
     "\n",
@@ -725,7 +725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Export to PDF\n",
+    "# Removing Code Blocks and Printing PDF\n",
     "\n",
     "Once you are done with your writing and if you want to export to PDF file, you can print out as PDF.\n",
     "\n",
@@ -739,7 +739,7 @@
     "\n",
     "![console](image/console.png)\n",
     "\n",
-    "__Removing code blocks__\n",
+    "## Removing code blocks\n",
     "\n",
     "* Run following command in the console:"
    ]
@@ -759,7 +759,7 @@
     "\n",
     "The code removes all input div DOM.\n",
     "\n",
-    "__Removing Out blocks__\n",
+    "## Removing Out blocks\n",
     "\n",
     "* We need to remove [Out] blocks as well.\n",
     "\n",
@@ -777,7 +777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After removing all Out blocks](./i.\n",
+    "![After removing all Out blocks](./image/out2.png)\n",
     "\n",
     "\n",
     "* Then right mouse button and choose \"Save Page As\" and Save the \"Complete page\" (not single page).\n",
