--- a/Gentle_Introduction_to_Chi_square_test_for_independence.ipynb
+++ b/Gentle_Introduction_to_Chi_square_test_for_independence.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,9 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Balck  White  Red  Blue\n",
+      "Male       48     22   33    47\n",
+      "Female     35     36   42    27\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -162,9 +171,8 @@
        "Female     35     36   42    27"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
