--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -16,6 +16,7 @@
     "* LaTeX\n",
     "* LaTeX Equation Numbering & Alignment\n",
     "* Writing tools\n",
+    "* Table of Contents \n",
     "* Removing Code Blocks and Printing PDF\n",
     "* Conclusion\n",
     "* References\n",
@@ -343,7 +344,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "The above markdown produces: ![alt text here](./image/jupyter_logo.png \"Logo Title Jupyter Notebook logo\").\n",
+    "The above markdown produces: ![alt text here](./image/jupyter_logo.png \"Logo Title Jupyter Notebook logo\")\n",
     "\n"
    ]
   },
@@ -418,7 +419,7 @@
     "Math | LaTeX | Example | <div style=\"width:290px\">Output</div>\n",
     ":--|:--:|:--:|:--:\n",
     "Fraction | \\frac{}{} | P(A)=\\frac{n(A)}{n(U)}| $P(A)=\\frac{n(A)}{n(U)}$\n",
-    "Square root| \\sqrt() |\\sqrt(x+y)|$\\sqrt(x+y)$\n",
+    "Square root| \\sqrt() |\\sqrt{x+y}|$\\sqrt{x+y}$\n",
     "Superscript|u^n|u_n=u_1r^{n-1}|$u_n=u_1r^{n-1}$\n",
     "Subscript | u_n | u_n=u_1+(n-1)d|$u_n=u_1+(n-1)d$\n",
     "Greek letters | \\alpha | \\alpha \\beta \\pi \\Gamma|$\\alpha \\beta \\pi \\Gamma$\n",
@@ -435,6 +436,109 @@
     "Can you write the following equation for mean in LaTeX?\n",
     "\n",
     "$$\\overline{x}=\\frac{\\sum \\limits _{i=1} ^k f_i x_i}{n} \\text{, where } n=\\sum \\limits _{i=1} ^k f_i  $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrices\n",
+    "\n",
+    "Type | LaTeX | Result\n",
+    ":--:|:--:|:--:\n",
+    "Parentheses,round brackets|`\\begin{pmatrix}\n",
+    "1 & 2 \\\\ a & b \\end{pmatrix}`|$\\begin{pmatrix}1 & 2 \\\\ a & b \\end{pmatrix}$\n",
+    "Brackets, square brackets|`\\begin{bmatrix} 1 & 2 \\\\ a & b \\end{bmatrix}`|$\\begin{bmatrix} 1 & 2 \\\\ a & b \\end{bmatrix}$\n",
+    "Braces, curly brackets|`\\begin{Bmatrix}1 & 2 \\\\ a & b \\end{Bmatrix}`|$\\begin{Bmatrix}1 & 2 \\\\ a & b \\end{Bmatrix}$\n",
+    "Pipes|`\\begin{vmatrix} 1 & 2 \\\\ a & b \\end{vmatrix}`|$\\begin{vmatrix} 1 & 2 \\\\ a & b \\end{vmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "P(X=17)=\n",
+    "\\begin{pmatrix}\n",
+    "20\\\\\n",
+    "17\n",
+    "\\end{pmatrix}\n",
+    "\\cdot 0.8^1 \\cdot 7(1-0.8)^{20-17}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "P(X=17)=\n",
+    "\\begin{pmatrix}\n",
+    "20\\\\\n",
+    "17\n",
+    "\\end{pmatrix}\n",
+    "\\cdot 0.8^1 \\cdot 7(1-0.8)^{20-17}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `cases` for piecewise functions\n",
+    "\n",
+    "`\\begin{cases}...\\end{cases}` renders multiple lines with an left curly-brace. "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "\\text{Probability density function:}\\\\\n",
+    "\\begin{cases}\n",
+    "\\frac{1}{b-a}&\\text{for $x\\in[a,b]$}\\\\\n",
+    "0&\\text{otherwise}\\\\\n",
+    "\\end{cases}\n",
+    "\\\\\n",
+    "\\text{Cumulative distribution function:}\\\\\n",
+    "\\begin{cases}\n",
+    "0&\\text{for $x<a$}\\\\\n",
+    "\\frac{x-a}{b-a}&\\text{for $x\\in[a,b)$}\\\\\n",
+    "1&\\text{for $x\\ge b$}\\\\\n",
+    "\\end{cases}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above codes produces the following."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "\\text{Probability density function:}\\\\\n",
+    "\\begin{cases}\n",
+    "\\frac{1}{b-a}&\\text{for $x\\in[a,b]$}\\\\\n",
+    "0&\\text{otherwise}\\\\\n",
+    "\\end{cases}\n",
+    "\\\\\n",
+    "\\text{Cumulative distribution function:}\\\\\n",
+    "\\begin{cases}\n",
+    "0&\\text{for $x<a$}\\\\\n",
+    "\\frac{x-a}{b-a}&\\text{for $x\\in[a,b)$}\\\\\n",
+    "1&\\text{for $x\\ge b$}\\\\\n",
+    "\\end{cases}\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
@@ -784,9 +888,13 @@
     "\n",
     "![console](image/save.png)\n",
     "\n",
-    "* You will get a page with an associated folder in windows. Use a  trick by zip the HTML page and then extract to unbind the associated. \n",
-    "     \n",
-    "* Now it is a single HTML page without code. You can print it as PDF.\n",
+    "* Open the saved html and File > Print...\n",
+    "\n",
+    "You need to select --blank-- in Page Headers and Page Footers.\n",
+    "\n",
+    "![print out](./image/print.png)\n",
+    "\n",
+    "Now you can print it out.\n",
     "     "
    ]
   },
