--- a/Internal_Assessment_and_Extended_Essay_Ideas.ipynb
+++ b/Internal_Assessment_and_Extended_Essay_Ideas.ipynb
@@ -37,7 +37,7 @@
     "- Confidence intervals for the mean of a normal population\n",
     "- Non-linear regression\n",
     "- Poisson distribution\n",
-    "- [Skewness](https://stackoverflow.com/questions/37647961/how-does-pandas-calculate-skew) Investigate about different ways to calculate skewness with examples, [link](https://www.spcforexcel.com/knowledge/basic-statistics/are-skewness-and-kurtosis-useful-statistics)\n",
+    "- [Skewness](https://www.statisticshowto.datasciencecentral.com/skewness/),[link](https://stackoverflow.com/questions/37647961/how-does-pandas-calculate-skew),[link](https://www.statisticshowto.datasciencecentral.com/pearsons-coefficient-of-skewness/) Investigate about different ways to calculate skewness with examples, [link](https://www.spcforexcel.com/knowledge/basic-statistics/are-skewness-and-kurtosis-useful-statistics)\n",
     "- [Kurtosis](https://www.itl.nist.gov/div898/handbook/eda/section3/eda35b.htm)\n",
     "- comparing different way to find [quartile](http://mathworld.wolfram.com/Quartile.html)\n",
     "- the standard error of mean\n",
@@ -149,6 +149,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
