--- a/List_of_Data_sources.ipynb
+++ b/List_of_Data_sources.ipynb
@@ -43,8 +43,9 @@
     "\n",
     "## Health\n",
     "\n",
-    "- [Public health](https://researchguides.uic.edu/publichealth)\n",
+    "- [Public health](https://researchguides.uic.edu/publichealth/data)\n",
     "- [OECD Health](https://data.oecd.org/health.htm)\n",
+    "- [Data world: biology](https://data.world/datasets/biology)\n",
     "\n",
     "## Environment\n",
     "\n",
@@ -99,6 +100,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
