--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -430,8 +430,11 @@
     "Trig| \\sin | \\sin()|$\\sin(x+y)$\n",
     "Comparison | \\leq | \\leq \\geq \\approx \\neq |$ \\leq \\geq \\approx \\neq$\n",
     "Overline | \\overline{} | \\overline{x} | $\\overline{x}$\n",
+    "Tilde ~ | \\sim | X\\sim N(\\mu, \\sigma^2)|$X\\sim N(\\mu, \\sigma^2)$\n",
+    "Number sets| \\mathbb{}|\\mathbb{I, R, Q, N, Z}|$\\mathbb{I, R, Q, N, Z}$\n",
     "\n",
-    "For more information please see this [article](https://davidhamann.de/2017/06/12/latex-cheat-sheet/) or [this link](https://www.overleaf.com/learn/latex/Integrals,_sums_and_limits).\n",
+    "\n",
+    "For more information please see this [article](https://davidhamann.de/2017/06/12/latex-cheat-sheet/) or [this link](https://www.overleaf.com/learn/latex/Integrals,_sums_and_limits). For mathematical symbols, see this [link](https://oeis.org/wiki/List_of_LaTeX_mathematical_symbols).\n",
     "\n",
     "Can you write the following equation for mean in LaTeX?\n",
     "\n",
@@ -805,6 +808,58 @@
     "\\end{align}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mixed alignment\n",
+    "\n",
+    "If you want to align left for texts and center for equations, you can use the following."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "\\text{Normal distribution} \\\\\n",
+    "$\n",
+    "$$\n",
+    "X \\sim N(\\mu,\\sigma^2) \\\\\n",
+    "$$\n",
+    "$\n",
+    "\\text{Probability density function} \\\\\n",
+    "$\n",
+    "$$\n",
+    "\\frac{1}{\\sigma \\sqrt{2 \\pi}}e^{-\\frac{(x- \\mu)^2}{2 \\sigma^2}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "\\text{Normal distribution} \\\\\n",
+    "$\n",
+    "$$\n",
+    "X \\sim N(\\mu,\\sigma^2) \\\\\n",
+    "$$\n",
+    "$\n",
+    "\\text{Probability density function} \\\\\n",
+    "$\n",
+    "$$\n",
+    "\\frac{1}{\\sigma \\sqrt{2 \\pi}}e^{-\\frac{(x- \\mu)^2}{2 \\sigma^2}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
