--- a/Internal_Assessment_and_Extended_Essay_Ideas.ipynb
+++ b/Internal_Assessment_and_Extended_Essay_Ideas.ipynb
@@ -37,12 +37,11 @@
     "- Confidence intervals for the mean of a normal population\n",
     "- Non-linear regression\n",
     "- Poisson distribution\n",
-    "- [Skewness](https://www.statisticshowto.datasciencecentral.com/skewness/),[link](https://stackoverflow.com/questions/37647961/how-does-pandas-calculate-skew),[link](https://www.statisticshowto.datasciencecentral.com/pearsons-coefficient-of-skewness/) Investigate about different ways to calculate skewness with examples, [link](https://www.spcforexcel.com/knowledge/basic-statistics/are-skewness-and-kurtosis-useful-statistics)\n",
-    "- [Kurtosis](https://www.itl.nist.gov/div898/handbook/eda/section3/eda35b.htm)\n",
     "- comparing different way to find [quartile](http://mathworld.wolfram.com/Quartile.html)\n",
     "- the standard error of mean\n",
     "- [Central Limit theorem](https://math.stackexchange.com/questions/504288/what-situation-calls-for-dividing-the-standard-deviation-by-sqrt-n) or [Square Root n Law](https://www.causeweb.org/smiles/readings/square-root-law-for-standard-error) and its practical usage.\n",
     "- Bayes' Themorem\n",
+    "- Uniform continuous distribution\n",
     "\n",
     "## Resources\n",
     "\n",
